# kaillera-bot

./: .gitignore  AUTOMATION.md  CONNECTION_ISSUE.md  DEBUGGING.md  DEBUG_SUMMARY.md  FORMATS.md  IMPLEMENTATION_SUMMARY.md  KAILLERA_CONNECTION.md  Makefile  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2.md  SETUP.md  WEB_INTERFACE.md  capture_simple.py  check_setup.py  diagnose.py  diagnose_deep.py  pyproject.toml  requirements.txt  sniff_kaillera.py  test_connection.py  test_kaillera_connection.py  test_simple.py
config/: settings.yaml.example
output/: .gitkeep
src/kaillera_bot/: __init__.py  main.py  pyautogui_stub.pyi
src/kaillera_bot/emulator/: __init__.py  emulator_controller.py
src/kaillera_bot/network/: __init__.py  kaillera_client.py  server_scanner.py
src/kaillera_bot/recorders/: __init__.py  input_recorder.py  network_recorder.py  video_recorder.py
src/kaillera_bot/web/: __init__.py  server.py
src/kaillera_bot/web/static/css/: style.css
src/kaillera_bot/web/static/js/: app.js
src/kaillera_bot/web/templates/: index.html
tests/: test_recorders.py
